--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class='navigation-bar'>
                 <img src="./images/logo.svg" class="nav-logo" alt="nav-logo">
                 <div class="nav-links">
-                    <a href="#">Feature</a>
+                    <a href="#">Features</a>
                     <a href="#">Team</a>
                     <a href="#">Sign In</a>
                 </div>
@@ -32,14 +32,14 @@
         <section class="hero">
             <div class="hero-banner">
                 <div class="hero-img">
-                    <img src="images/illustration-intro.png">
+                    <img src="images/illustration-intro.png" alt="intro-img">
                 </div>
                 <div class="hero-details">
                     <h1 class="banner-heading">All your files in one secure location, accessible anywhere.</h1>
                     <p class="banner-subdesc"> Fylo stores your most important files in one secure location. Access them wherever you need, share and collaborate with friends, family, and co-workers.</p>
                     <div class="call-to-action">
                         <form>
-                            <button><h2>Get Started</h2></button>
+                            <button>Get Started</button>
                         </form>
                     </div>
                 </div>
@@ -55,21 +55,21 @@
                 </div>
             </div>
             <div class="service security">
-                <img src="images/icon-security.svg">
+                <img src="images/icon-security.svg" alt="security-icon">
                 <div class="service-details">
                     <h2>Security you can trust</h2>
                     <p>2-factor authentication and user-controlled encryption are just a couple of the security features we allow to help secure your files.</p>
                 </div>
             </div>
             <div class="service real-time">
-                <img src="images/icon-collaboration.svg">
+                <img src="images/icon-collaboration.svg" alt="collaboration-icon">
                 <div class="service-details">
                     <h2>Real-time collaboration</h2>
                     <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.</p>
                 </div>
             </div>
             <div class="service store">
-                <img src="images/icon-any-file.svg">
+                <img src="images/icon-any-file.svg" alt="file-icon">
                 <div class="service-details">
                     <h2>Store any type of file</h2>
                     <p> Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all file types to be securely stored and shared.</p>
@@ -81,7 +81,7 @@
 
             <div class="description">
                 <div class="illustration-2">
-                    <img id="illustration-2" src="./images/illustration-stay-productive.png">
+                    <img id="illustration-2" src="./images/illustration-stay-productive.png" alt="production-img">
                 </div>
                 <div class="sec-desc">
                     <h1 class="sec-heading">Stay productive, wherever you are</h1>
@@ -99,9 +99,9 @@
             <div class="review-card">
                 <p class="review">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
                 <div class="review-hero">
-                    <img src="./images/profile-1.jpg">
+                    <img src="./images/profile-1.jpg" alt="profile1-img">
                     <div class="hero-details">
-                        <h3>Satish Patel</h3>
+                        <h2>Satish Patel</h2>
                         <p>Founder & CEO, Huddle</p>
                     </div>
                 </div>
@@ -109,9 +109,9 @@
             <div class="review-card">
                 <p class="review"> Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
                 <div class="review-hero">
-                    <img src="./images/profile-2.jpg">
+                    <img src="./images/profile-2.jpg" alt="profile2-img">
                     <div class="hero-details">
-                        <h3>Bruce McKenziel</h3>
+                        <h2>Bruce McKenziel</h2>
                         <p>Founder & CEO, Huddle</p>
                     </div>
                 </div>
@@ -120,9 +120,9 @@
                 <p class="review"> Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.
                 </p>
                 <div class="review-hero">
-                    <img src="./images/profile-3.jpg">
+                    <img src="./images/profile-3.jpg" alt="profile3-img">
                     <div class="hero-details">
-                        <h3>Iva Boyd</h3>
+                        <h2>Iva Boyd</h2>
                         <p>Founder & CEO, Huddle</p>
                     </div>
                 </div>
@@ -150,7 +150,7 @@
         <img class="footer-logo" src='./images/logo.svg' alt='logo' />
         <div class="footer-wrapper">
             <div class="location">
-                <img src="images/icon-location.svg" alt="loc">
+                <img src="images/icon-location.svg" alt="location-icon">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
             </div>
 
@@ -182,19 +182,19 @@
 
             <div class="social-media">
                 <a class="circle" href="#">
-                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-facebook-f" aria-hidden="true"></i>
                 </a>
                 <a class="circle" href="#">
-                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-twitter" aria-hidden="true"></i>
                 </a>
                 <a class="circle" href="#">
-                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-instagram" aria-hidden="true"></i>
                 </a>
             </div>
         </div>
-        <div class="attribution">
+        <!-- <div class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/vikrantmalla">Vikrant Malla</a>.
-        </div>
+        </div> -->
     </footer>
 
     <script src="main.js"></script>
