solve footer-icon issue

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </section>
         <section class="feature">
             <div class="service access">
-                <img src="images/icon-access-anywhere.svg">
+                <img src="images/icon-access-anywhere.svg" alt="anywhere-icon">
                 <div class="service-details">
                     <h2>Access your files, anywhere</h2>
                     <p>The ability to use a smartphone, tablet, or computer to access your account means your files follow you everywhere..</p>
@@ -181,15 +181,10 @@
             </div>
 
             <div class="social-media">
-                <a class="circle" href="#">
-                    <i class="fab fa-facebook-f" aria-hidden="true"></i>
-                </a>
-                <a class="circle" href="#">
-                    <i class="fab fa-twitter" aria-hidden="true"></i>
-                </a>
-                <a class="circle" href="#">
-                    <i class="fab fa-instagram" aria-hidden="true"></i>
-                </a>
+                <i class="fab fa-facebook-f" aria-hidden="true"></i>
+                <i class="fab fa-twitter" aria-hidden="true"></i>
+                <i class="fab fa-instagram" aria-hidden="true"></i>
+
             </div>
         </div>
         <!-- <div class="attribution">
